<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="#4C000000">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape_dialog_frame"
        android:orientation="vertical"
        tools:layout_marginEnd="24dp"
        tools:layout_marginStart="24dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            style="@style/Sentence.Widget.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/sentence_permission_can_draw_overlay_title"
            android:textColor="@color/sentence_text_main"
            android:textSize="16dp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/message"
            style="@style/Sentence.Widget.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/sentence_dialog_permission_overlay_message"
            android:textColor="@color/sentence_text_main"
            android:textSize="12dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_negative"
                style="@style/Sentence.Widget.Button.Dialog.Negative"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sentence_button_later" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_positive"
                style="@style/Sentence.Widget.Button.Dialog.Positive"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sentence_button_allow" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>