<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sentence_window_background"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="22dp"
        android:paddingEnd="22dp"
        app:layout_constraintBottom_toTopOf="@+id/button_confirm"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Sentence.Widget.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/sentence_permission_subject"
            android:textColor="@color/sentence_text_main"
            android:textSize="20dp"
            android:textStyle="normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="30dp"
            android:background="@color/sentence_line_common" />

        <!-- region { permission - can draw overlay } -->
        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Sentence.Widget.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:drawableStart="@drawable/ic_permission_overlay"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/sentence_permission_can_draw_overlay_title"
            android:textColor="@color/sentence_text_main"
            android:textSize="14dp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/permission_can_draw_overlay_description"
            style="@style/Sentence.Widget.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="40dp"
            android:gravity="center_vertical"
            android:text="@string/sentence_permission_can_draw_overlay_description"
            android:textColor="@color/sentence_text_sub"
            android:textSize="12dp" />
        <!-- endregion -->

    </LinearLayout>

    <!-- region { button } -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_confirm"
        style="@style/Sentence.Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ripple_button_ec3d47"
        android:gravity="center"
        android:text="@string/sentence_button_confirm"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent" />
    <!-- endregion -->

</androidx.constraintlayout.widget.ConstraintLayout>