<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sentence_screen_background"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                style="@style/Sentence.Widget.ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_home" />

            <androidx.appcompat.widget.AppCompatImageView
                style="@style/Sentence.Widget.ImageView"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_block"
                android:tint="#EC3D47" />

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Sentence.Widget.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/sentence_screen_locker_main_text"
            android:textColor="@color/sentence_white"
            android:textSize="14dp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Sentence.Widget.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22.5dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="22.5dp"
            android:gravity="center"
            android:text="@string/sentence_screen_locker_sub_text"
            android:textColor="@color/sentence_text_sub"
            android:textSize="12dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <!-- region { slider } -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/screen_locker_dismiss"
        style="@style/Sentence.Widget.TextView"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:drawableEnd="@drawable/ic_slide_arrow"
        android:gravity="center"
        android:text="@string/sentence_screen_slide_unlock"
        android:textColor="@color/sentence_white"
        android:textSize="14dp" />
    <!-- endregion -->

</RelativeLayout>